# RoboticsProject

./: .gitmodules  README.md  requirements.txt  robot2.rviz
april_tag_detection/: README.md  package.xml  setup.cfg  setup.py
april_tag_detection/april_tag_detection/: april_tag_detector.py  april_tag_mapper.py  utils.py
april_tag_detection/april_tags_models/: info.md
april_tag_detection/april_tags_models/Apriltag36_11_00005/: model.sdf
april_tag_detection/april_tags_models/Apriltag36_11_00006/: model.sdf
april_tag_detection/april_tags_models/Apriltag36_11_00011/: model.sdf
april_tag_detection/april_tags_models/Apriltag36_11_00012/: model.sdf
april_tag_detection/april_tags_models/Apriltag36_11_00015/: model.sdf
april_tag_detection/launch/: start_detection.launch.py  start_detection_debug.launch.py  tags_det.launch.py
april_tag_detection/rviz/: turtlebot4_apriltag_debug.rviz
assets/: CMakeLists.txt  package.xml
assets/models/: info.md
assets/models/Apriltag36_11_00001/: model.sdf
assets/models/Apriltag36_11_00002/: model.sdf
assets/models/Apriltag36_11_00003/: model.sdf
assets/models/Apriltag36_11_00004/: model.sdf
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: GetTagPosition.srv
forklift_manager/: README.md  package.xml  setup.cfg  setup.py
gz_test/: package.xml  setup.py
gz_test/gazebo/: building_robot.sdf
hello_world_package/: package.xml  setup.cfg  setup.py
hello_world_package/hello_world_package/: publisher_node.py  subscriber_node.py
robot_description/: setup.py
robot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_description/install/robot_description/share/robot_description/: package.sh  package.xml
robot_description/launch/: display.launch.py
robot_description/log/: latest_build
robot_description/rviz/: robot_viewer.rviz
robot_description/urdf/: diff_robot.urdf  example_robot.urdf
turtlebot4_simulator/: README.md
turtlebot4_simulator/turtlebot4_gz_bringup/: package.xml
(+14 files in other folders)
