<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>april_tag_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="americo.cherubini2003@gmail.com">americo</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_runtime</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <!-- Debug / visualization -->
  <exec_depend>ros-jazzy-rqt-image-view</exec_depend>

  <!-- OpenCV (Python system package) -->
  <exec_depend>python3-opencv</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
